<resources>
    <string name="app_name">Ping Pong Score</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_game_settings_title">Game Settings</string>
    <string name="pref_match_settings_title">Match Settings</string>
    <string name="pref_title_score_limit">Score Limit</string>
    <string name="pref_title_win_by_two">Win by 2</string>
    <string name="pref_title_match_length">Select Match Length</string>
    <string name="dialog_game_over_message">%s is the winner!</string>
    <string name="ok">Ok</string>

</resources>
